fix: lint issues

--- a/src/components/controls/Datepicker/Datepicker.module.scss
+++ b/src/components/controls/Datepicker/Datepicker.module.scss
@@ -19,7 +19,8 @@
     cursor: pointer;
     font-size: font.$size-xl;
     line-height: 1.75;
-    padding: 0 math.div(input.$padding-horizontal, 2) 0 math.div(input.$padding-horizontal, 2);
+    padding: 0 math.div(input.$padding-horizontal, 2) 0
+      math.div(input.$padding-horizontal, 2);
     transition: background transition.$duration transition.$timing,
       border-color transition.$duration transition.$timing;
 
