feat: 1px adjustment

--- a/src/components/controls/Datepicker/Datepicker.module.scss
+++ b/src/components/controls/Datepicker/Datepicker.module.scss
@@ -131,7 +131,7 @@
     &-dropdown-icon {
       color: color.$blue;
       height: font.$size-sm;
-      margin: 0 0 0 spacing.$horizontal-xs;
+      margin: -1px 0 0 spacing.$horizontal-xs;
       width: font.$size-sm;
     }
   }
