--- a/src/components/controls/Button/Button.module.scss
+++ b/src/components/controls/Button/Button.module.scss
@@ -38,7 +38,7 @@
       display: block;
       width: 100%;
 
-      @media screen and (min-width: breakpoint.$md) {
+      @media (min-width: breakpoint.$md) {
         display: inline-block;
         width: auto;
       }
