feat: additional container svg colours

--- a/src/styles/variables/container.scss
+++ b/src/styles/variables/container.scss
@@ -5,6 +5,7 @@ $colors: (
   'black': #4f4f4f,
   'greyLight': #bdbdbd,
   'blue': #2d9cdb,
+  'blueMid': #1579c6,
   'blueDark': #2262b9,
   'blueLight': #56ccf2,
   'green': #3cb848,
@@ -17,6 +18,7 @@ $colors: (
   'brown': #ad7849,
   'orange': #f2994a,
   'pink': #ff649e,
+  'magenta': #d12767,
   'maroon': #a62f5a,
   'purple': #9946db,
   'transparent': #ffffff00,
