feat: skin muted text colour

--- a/src/styles/mixins/skin.scss
+++ b/src/styles/mixins/skin.scss
@@ -3,6 +3,7 @@
   --skin-background-muted: var(--skin-background-muted-#{$type});
   --skin-border-color: var(--skin-border-color-#{$type});
   --skin-color: var(--skin-color-#{$type});
+  --skin-color-muted: var(--skin-color-muted-#{$type});
   --skin-heading-color: var(--skin-heading-color-#{$type});
   --skin-link-color: var(--skin-link-color-#{$type});
   --skin-link-text-decoration: var(--skin-link-text-decoration-#{$type});
