--- a/src/styles/variables/skin.scss
+++ b/src/styles/variables/skin.scss
@@ -1,6 +1,7 @@
 $background: var(--skin-background);
 $background-muted: var(--skin-background-muted);
 $color: var(--skin-color);
+$color-muted: var(--skin-color-muted);
 $heading-color: var(--skin-heading-color);
 $link-color: var(--skin-link-color);
 $border-color: var(--skin-border-color);
