--- a/src/styles/base/_skins.scss
+++ b/src/styles/base/_skins.scss
@@ -5,6 +5,7 @@
   --skin-background-muted-light: #{color.$blue-lightest};
   --skin-border-color-light: #{color.$blue-light};
   --skin-color-light: #{color.$body};
+  --skin-color-muted-light: #{color.$body};
   --skin-heading-color-light: #{color.$blue-darkest};
   --skin-link-color-light: #{color.$link};
   --skin-link-text-decoration-light: none;
@@ -14,6 +15,7 @@
   --skin-background-muted-dark: #{color.$blue-darkest};
   --skin-border-color-dark: transparent;
   --skin-color-dark: #{color.$white};
+  --skin-color-muted-dark: #{color.$blue-lightest};
   --skin-heading-color-dark: #{color.$white};
   --skin-link-color-dark: #{color.$white};
   --skin-link-text-decoration-dark: underline;
@@ -23,6 +25,7 @@
   --skin-background-muted-neutral: #{color.$blue-lightest};
   --skin-border-color-neutral: #{color.$blue};
   --skin-color-neutral: #{color.$white};
+  --skin-color-muted-neutral: #{color.$blue-dark};
   --skin-heading-color-neutral: #{color.$white};
   --skin-link-color-neutral: #{color.$white};
   --skin-link-text-decoration-neutral: underline;
@@ -32,6 +35,7 @@
   --skin-background-muted-positive: #{color.$blue-lightest};
   --skin-border-color-positive: #{color.$green};
   --skin-color-positive: #{color.$white};
+  --skin-color-muted-positive: #{color.$blue-dark};
   --skin-heading-color-positive: #{color.$white};
   --skin-link-color-positive: #{color.$white};
   --skin-link-text-decoration-positive: underline;
@@ -41,6 +45,7 @@
   --skin-background-muted-negative: #{color.$blue-lightest};
   --skin-border-color-negative: #{color.$maroon};
   --skin-color-negative: #{color.$white};
+  --skin-color-muted-negative: #{color.$blue-dark};
   --skin-heading-color-negative: #{color.$white};
   --skin-link-color-negative: #{color.$white};
   --skin-link-text-decoration-negative: underline;
@@ -50,6 +55,7 @@
   --skin-background-muted-attention: #{color.$blue-lightest};
   --skin-border-color-attention: #{color.$yellow};
   --skin-color-attention: #{color.$blue-darkest};
+  --skin-color-muted-attention: #{color.$blue-dark};
   --skin-heading-color-attention: #{color.$blue-darkest};
   --skin-link-color-attention: #{color.$blue};
   --skin-linktext-decoration-attention: underline;
@@ -59,6 +65,7 @@
   --skin-background-muted: var(--skin-background-muted-light);
   --skin-border-color: var(--skin-border-color-light);
   --skin-color: var(--skin-color-light);
+  --skin-color-muted: var(--skin-color-muted-light);
   --skin-heading-color: var(--skin-heading-color-light);
   --skin-link-color: var(--skin-link-color-light);
   --skin-link-text-decoration: var(--skin-link-text-decoration-light);
