fix: modal using deprecated math

--- a/src/components/composition/Modal/Modal.module.scss
+++ b/src/components/composition/Modal/Modal.module.scss
@@ -1,4 +1,5 @@
 @use 'sass:color' as sassColor;
+@use 'sass:math';
 @use '../../../styles/variables/color';
 @use '../../../styles/variables/font';
 @use '../../../styles/variables/spacing';
@@ -42,8 +43,8 @@
   }
 
   &__dialog {
-    animation: fade-in-scale transition.$duration (transition.$duration / 2)
-      both transition.$timing;
+    animation: fade-in-scale transition.$duration
+      math.div(transition.$duration, 2) both transition.$timing;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: auto;
     max-height: 100vh;
