--- a/src/styles/themes/default/main.scss
+++ b/src/styles/themes/default/main.scss
@@ -1,6 +1,6 @@
 @use '../../variables/color';
 @use '../../mixins/skin';
 
-$skins: light, dark, neutral, positive, negative, attention;
+$skins: light, dark, info, neutral, positive, negative, attention;
 
 @include skin.create-skins($skins);
