--- a/src/components/controls/Slider/Slider.module.scss
+++ b/src/components/controls/Slider/Slider.module.scss
@@ -30,27 +30,25 @@
   }
 
   &__labels {
-    align-items: stretch;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-auto-rows: min-content;
+    grid-template-columns: 1fr auto;
   }
 
   &__label {
-    flex: 0 0 auto;
+    display: block;
     font-weight: font.$weight-bold;
     min-width: 0;
     padding: 0;
-  }
 
-  &__label--lower {
-    color: color.$teal;
-    flex-grow: 1;
-    flex-shrink: 1;
-  }
+    &--lower {
+      color: color.$teal;
+    }
 
-  &__label--upper {
-    color: color.$green;
+    &--upper {
+      color: color.$green;
+      justify-self: flex-end;
+    }
   }
 
   &--disabled {
