--- a/src/styles/variables/container.scss
+++ b/src/styles/variables/container.scss
@@ -8,6 +8,7 @@ $colors: (
   'blueMid': #1579c6,
   'blueDark': #2262b9,
   'blueLight': #56ccf2,
+  'blueMuted': #d7e7f5,
   'green': #3cb848,
   'greenDark': #219653,
   'greenLight': #6fcf97,
@@ -21,6 +22,6 @@ $colors: (
   'magenta': #d12767,
   'maroon': #a62f5a,
   'purple': #9946db,
-  'transparent': #ffffff00,
   'duckEgg': #89c1ab,
+  'transparent': #ffffff00,
 );
