--- a/src/components/composition/Modal/Modal.module.scss
+++ b/src/components/composition/Modal/Modal.module.scss
@@ -69,6 +69,6 @@
   }
 
   &__inner {
-    padding: spacing.$vertical-fluid-sm spacing.$horizontal-fluid-sm;
+    padding: spacing.$fluid-sm spacing.$fluid-sm;
   }
 }
