--- a/src/components/content/HelpText/HelpText.module.scss
+++ b/src/components/content/HelpText/HelpText.module.scss
@@ -5,7 +5,7 @@
 .help-text {
   color: color.$blue-dark;
   font-size: font.$size-sm;
-  padding-top: spacing.$vertical-sm;
+  padding-top: spacing.$sm;
 
   &--positive {
     color: color.$positive;
