--- a/src/components/content/LoadingButton/LoadingButton.module.scss
+++ b/src/components/content/LoadingButton/LoadingButton.module.scss
@@ -14,8 +14,7 @@
   &--small {
     min-height: 2.25rem;
     min-width: 5.5rem;
-    padding: calc(#{spacing.$vertical-xs} - var(--button-border-width))
-      spacing.$horizontal-sm;
+    padding: calc(#{spacing.$xs} - var(--button-border-width)) spacing.$sm;
   }
 
   &--block {
