--- a/src/components/controls/Select/Select.module.scss
+++ b/src/components/controls/Select/Select.module.scss
@@ -32,7 +32,7 @@
     font-size: font.$size-xl;
     justify-content: center;
     min-width: spacing.$thumb;
-    padding: 0 spacing.$horizontal-sm;
+    padding: 0 spacing.$sm;
     pointer-events: none;
     position: absolute;
     right: 0;
