--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -46,7 +46,7 @@ h4 {
 
 p {
   line-height: font.$line-height-lg;
-  margin-bottom: spacing.$vertical-sm;
+  margin-bottom: spacing.$sm;
   margin-top: 0;
 
   &:last-child {
