--- a/src/styles/mixins/forms.scss
+++ b/src/styles/mixins/forms.scss
@@ -85,8 +85,8 @@
   flex-shrink: 0;
   height: font.$size-lg;
   justify-content: center;
-  margin-right: spacing.$horizontal-sm;
-  margin-top: spacing.$vertical-xs;
+  margin-right: spacing.$sm;
+  margin-top: spacing.$xs;
   position: relative;
   transition: background transition.$duration transition.$timing,
     border-color transition.$duration transition.$timing,
