--- a/src/styles/mixins/title.scss
+++ b/src/styles/mixins/title.scss
@@ -7,7 +7,7 @@
   font-weight: var(--heading-font-weight, 700);
   letter-spacing: -0.025em;
   line-height: font.$line-height-sm;
-  margin-bottom: spacing.$vertical-xs;
+  margin-bottom: spacing.$xs;
   margin-top: 0;
 
   b,
