--- a/src/styles/variables/input.scss
+++ b/src/styles/variables/input.scss
@@ -10,6 +10,6 @@ $color: var(--input-color);
 $checked: var(--input-checked);
 $checkradio-border-radius: var(--input-checkradio-border-radius);
 
-$padding-vertical: spacing.$vertical-sm;
-$padding-horizontal: spacing.$horizontal;
+$padding-vertical: spacing.$sm;
+$padding-horizontal: spacing.$md;
 $padding: $padding-vertical $padding-horizontal;
