--- a/src/components/composition/FormGroup/FormGroup.module.scss
+++ b/src/components/composition/FormGroup/FormGroup.module.scss
@@ -5,7 +5,7 @@
 
 .form-group {
   &__label {
-    column-gap: spacing.$horizontal-sm;
+    column-gap: spacing.$sm;
     display: grid;
     grid-auto-rows: min-content;
     grid-template-columns: 1fr auto;
@@ -13,13 +13,13 @@
 
   &__info {
     &-inner {
-      margin-block-start: spacing.$vertical;
+      margin-block-start: spacing.$md;
     }
   }
 
   &--horizontal {
     @media (min-width: breakpoint.$tablet) {
-      column-gap: spacing.$horizontal;
+      column-gap: spacing.$md;
       display: grid;
       grid-template-columns: 1fr 1fr;
 
