--- a/src/components/composition/Grid/Grid.module.scss
+++ b/src/components/composition/Grid/Grid.module.scss
@@ -4,8 +4,7 @@
 
 .grid {
   display: flex;
-  margin: (-#{math.div(spacing.$vertical, 2)})
-    (-#{math.div(spacing.$horizontal, 2)});
+  margin: (-#{math.div(spacing.$md, 2)}) (-#{math.div(spacing.$md, 2)});
 
   // Wrap
   &--wrap {
@@ -15,15 +14,15 @@
   // Inset
   &--inset {
     margin: 0;
-    padding: math.div(spacing.$vertical, 2) math.div(spacing.$horizontal, 2);
+    padding: math.div(spacing.$md, 2) math.div(spacing.$md, 2);
   }
 
   &--inset-fluid {
-    padding: spacing.$vertical-fluid-sm 0;
+    padding: spacing.$fluid-sm 0;
   }
 
   &--inset-vertical-fluid {
-    padding: spacing.$vertical-fluid-sm 0;
+    padding: spacing.$fluid-sm 0;
   }
 
   // Direction
@@ -100,7 +99,7 @@
   &__item {
     flex: 0 0 auto;
     min-width: 0;
-    padding: (math.div(spacing.$vertical, 2)) (math.div(spacing.$horizontal, 2));
+    padding: (math.div(spacing.$md, 2)) (math.div(spacing.$md, 2));
 
     &--grow {
       flex-grow: 1;
@@ -165,42 +164,34 @@
   // Spacing
   &--spacing {
     &-xs {
-      margin: (-#{math.div(spacing.$vertical-xs, 2)})
-        (-#{math.div(spacing.$horizontal-xs, 2)});
+      margin: (-#{math.div(spacing.$xs, 2)}) (-#{math.div(spacing.$xs, 2)});
 
       > .grid__item {
-        padding: (math.div(spacing.$vertical-xs, 2))
-          (math.div(spacing.$horizontal-xs, 2));
+        padding: (math.div(spacing.$xs, 2)) (math.div(spacing.$xs, 2));
       }
     }
 
     &-sm {
-      margin: (-#{math.div(spacing.$vertical-sm, 2)})
-        (-#{math.div(spacing.$horizontal-sm, 2)});
+      margin: (-#{math.div(spacing.$sm, 2)}) (-#{math.div(spacing.$sm, 2)});
 
       > .grid__item {
-        padding: (math.div(spacing.$vertical-sm, 2))
-          (math.div(spacing.$horizontal-sm, 2));
+        padding: (math.div(spacing.$sm, 2)) (math.div(spacing.$sm, 2));
       }
     }
 
     &-lg {
-      margin: (-#{math.div(spacing.$vertical-lg, 2)})
-        (-#{math.div(spacing.$horizontal-lg, 2)});
+      margin: (-#{math.div(spacing.$lg, 2)}) (-#{math.div(spacing.$lg, 2)});
 
       > .grid__item {
-        padding: (math.div(spacing.$vertical-lg, 2))
-          (math.div(spacing.$horizontal-lg, 2));
+        padding: (math.div(spacing.$lg, 2)) (math.div(spacing.$lg, 2));
       }
     }
 
     &-xl {
-      margin: (-#{math.div(spacing.$vertical-xl, 2)})
-        (-#{math.div(spacing.$horizontal-xl, 2)});
+      margin: (-#{math.div(spacing.$xl, 2)}) (-#{math.div(spacing.$xl, 2)});
 
       > .grid__item {
-        padding: (math.div(spacing.$vertical-xl, 2))
-          (math.div(spacing.$horizontal-xl, 2));
+        padding: (math.div(spacing.$xl, 2)) (math.div(spacing.$xl, 2));
       }
     }
 
