--- a/src/components/composition/Wrap/Wrap.module.scss
+++ b/src/components/composition/Wrap/Wrap.module.scss
@@ -4,7 +4,7 @@
 .wrap {
   margin: 0 auto;
   max-width: 90em; // 1440px
-  padding: 0 spacing.$horizontal;
+  padding: 0 spacing.$md;
   width: 100%;
 
   @each $key, $bp in breakpoint.$map {
