--- a/src/components/controls/Label/Label.module.scss
+++ b/src/components/controls/Label/Label.module.scss
@@ -12,6 +12,6 @@
   &--type-secondary {
     align-items: flex-start;
     font-weight: normal;
-    min-height: spacing.$vertical-lg;
+    min-height: spacing.$lg;
   }
 }
