--- a/src/styles/variables/spacing.scss
+++ b/src/styles/variables/spacing.scss
@@ -3,16 +3,16 @@
 $thumb: 2.75rem; // 44px
 
 $md: 1rem; // 16px
-$lg: $horizontal * 2;
-$sm: math.div($horizontal, 2);
-$xl: $horizontal * 4;
-$xs: math.div($horizontal, 4);
+$lg: $md * 2;
+$sm: math.div($md, 2);
+$xl: $md * 4;
+$xs: math.div($md, 4);
 
 $fluid: 5%;
-$fluid-lg: $horizontal-fluid * 1.5;
-$fluid-sm: $horizontal-fluid * 0.5;
+$fluid-lg: $fluid * 1.5;
+$fluid-sm: $fluid * 0.5;
 
 $root: 5vw;
-$root-lg: $horizontal-root * 1.5;
-$root-sm: $horizontal-root * 0.5;
-$root-xl: $horizontal-root * 2.25;
+$root-lg: $root * 1.5;
+$root-sm: $root * 0.5;
+$root-xl: $root * 2.25;
