feat: add the info skin to bor skins

--- a/src/styles/themes/business-of-recycling/main.scss
+++ b/src/styles/themes/business-of-recycling/main.scss
@@ -3,7 +3,8 @@
 @use '../../mixins/skin';
 
 // Create the skins globally
-$skins: light, medium, dark, accent, neutral, positive, negative, attention;
+$skins: light, medium, dark, info, accent, neutral, positive, negative,
+  attention;
 
 @include skin.create-skins($skins);
 
