--- a/src/components/controls/Collapse/Collapse.module.scss
+++ b/src/components/controls/Collapse/Collapse.module.scss
@@ -20,9 +20,7 @@
     display: grid;
     grid-template-rows: 0fr;
     transition: grid-template-rows transition.$duration transition.$timing,
-      content-visibility transition.$duration transition.$timing;
-    /* stylelint-disable-next-line property-no-unknown */
-    transition-behavior: allow-discrete;
+      content-visibility transition.$duration transition.$timing allow-discrete;
 
     &--open {
       content-visibility: visible;
