feat: input focus state for BoR

--- a/src/styles/mixins/forms.scss
+++ b/src/styles/mixins/forms.scss
@@ -13,7 +13,8 @@
   display: flex;
   line-height: 1.75;
   position: relative;
-  transition: border-color transition.$duration transition.$timing,
+  transition:
+    border-color transition.$duration transition.$timing,
     background-color transition.$duration transition.$timing;
 
   &:hover,
@@ -23,6 +24,13 @@
 
   &:focus-within {
     background: var(--input-background-focus);
+    outline-color: var(
+      --input-outline-color-focus-webkit,
+      --input-outline-color-focus
+    );
+    outline-offset: var(--input-outline-offset-focus);
+    outline-style: var(--input-outline-style-focus);
+    outline-width: var(--input-outline-width-focus);
   }
 
   &--valid {
@@ -88,7 +96,8 @@
   margin-right: spacing.$sm;
   margin-top: spacing.$xs;
   position: relative;
-  transition: background transition.$duration transition.$timing,
+  transition:
+    background transition.$duration transition.$timing,
     border-color transition.$duration transition.$timing,
     color transition.$duration transition.$timing;
   width: font.$size-lg;
